--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,12 @@
   * {
     @apply box-border;
   }
-input[type="text"],
-input[type="password"],
-input[type="email"] {
-  background-color: transparent;
-  /* Change this to your desired color */
-}
+  input[type="text"],
+  input[type="password"],
+  input[type="email"] {
+    background-color: transparent;
+    /* Change this to your desired color */
+  }
 
   /* ::-webkit-scrollbar {
     @apply w-2 bg-neutral-300/40;
@@ -139,5 +139,13 @@ input[type="email"] {
   @font-face {
     font-family: "ukraineHead-thin";
     src: url("./font/header/eUkraineHeadThin.otf");
+  }
+  @font-face {
+    font-family: "liberationRegular";
+    src: url("./font/LiberationMonoRegular.ttf");
+  }
+  @font-face {
+    font-family: "liberationBold";
+    src: url("./font/LiberationMonoBold.ttf");
   }
 }
