--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,16 @@
     background-color: transparent;
     /* Change this to your desired color */
   }
-
-  /* ::-webkit-scrollbar {
-    @apply w-2 bg-neutral-300/40;
+  .line-light {
+    -webkit-box-shadow: inset 0px 0px 0px 1px rgba(29, 29, 29);
+    -moz-box-shadow: inset 0px 0px 0px 1px rgba(29, 29, 29);
+    box-shadow: inset 0px 0px 0px 1px rgba(100, 84, 84, 0.171);
   }
-
-  ::-webkit-scrollbar-thumb {
-    @apply bg-neutral-400/30 hover:bg-neutral-500/40;
-  } */
+  .line-dark {
+    -webkit-box-shadow: inset 0px 0px 0px 1px rgba(29, 29, 29);
+    -moz-box-shadow: inset 0px 0px 0px 1px rgba(29, 29, 29);
+    box-shadow: inset 0px 0px 0px 1px rgba(7, 6, 6, 0.63);
+  }
   /* border divider */
   .thin-box-divider {
     /* box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px; */
