--- a/src/index.css
+++ b/src/index.css
@@ -150,4 +150,7 @@
     font-family: "liberationBold";
     src: url("./font/LiberationMonoBold.ttf");
   }
+
+  .sample{
+box-shadow: rgba(0, 0, 0, 0.075) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; }
 }
