--- a/src/index.css
+++ b/src/index.css
@@ -152,5 +152,6 @@
   }
 
   .sample{
-box-shadow: rgba(0, 0, 0, 0.075) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; }
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
 }
