--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@
     background-color: transparent;
     /* Change this to your desired color */
   }
+  ::-webkit-scrollbar {
+    width: 0.425rem;
+  }
+  /* Set scrollbar thumb color */
+  ::-webkit-scrollbar-thumb {
+    background-color: #101213;
+    @apply rounded-lg cursor-pointer hover:bg-[#1a1c1e];
+  }
   .line-light {
     -webkit-box-shadow: inset 0px 0px 0px 1px rgba(29, 29, 29);
     -moz-box-shadow: inset 0px 0px 0px 1px rgba(29, 29, 29);
@@ -151,7 +159,7 @@
     src: url("./font/LiberationMonoBold.ttf");
   }
 
-  .sample{
+  .sample {
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-}
+  }
 }
