--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,13 @@
     background-color: transparent;
     /* Change this to your desired color */
   }
+ 
   ::-webkit-scrollbar {
-    width: 0.425rem;
+    width: 0.45rem;
   }
   /* Set scrollbar thumb color */
   ::-webkit-scrollbar-thumb {
-    background-color: #101213;
-    @apply rounded-lg cursor-pointer hover:bg-[#1a1c1e];
+    @apply rounded-lg cursor-pointer bg-[#1a1c1e]/10 hover:bg-[#1a1c1e]/20;
   }
   .line-light {
     -webkit-box-shadow: inset 0px 0px 0px 1px rgba(29, 29, 29);
@@ -70,7 +70,7 @@
     box-shadow: rgba(0, 0, 0, 0.03) 0px 1px 1px 0px,
       rgba(27, 31, 35, 0.1) 0px 0px 0px 1px;
   }
-
+  
   /* Medium top divider */
   .medium-top-divider {
     border-top: 1px solid rgba(27, 31, 35, 0.1);
@@ -160,6 +160,5 @@
   }
 
   .sample {
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-  }
+box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;  }
 }
