--- a/src/index.css
+++ b/src/index.css
@@ -160,5 +160,5 @@
   }
 
   .sample {
-box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;  }
+box-shadow: rgba(0, 0, 0, 0.03) 0px 6px 6px 0px, rgba(0, 0, 0, 0.05) 0px 0px 0px 1px; }
 }
