--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   }
   /* Set scrollbar thumb color */
   ::-webkit-scrollbar-thumb {
-    @apply rounded-lg cursor-pointer bg-[#1a1c1e]/10 hover:bg-[#1a1c1e]/20;
+    @apply  cursor-pointer bg-[#1a1c1e]/10 hover:bg-[#1a1c1e]/20;
   }
   .line-light {
     -webkit-box-shadow: inset 0px 0px 0px 1px rgba(29, 29, 29);
