--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
  
   ::-webkit-scrollbar {
     width: 0.40rem;
+    @apply bg-[#eeeeee]/50
   }
   /* Set scrollbar thumb color */
   ::-webkit-scrollbar-thumb {
